[project]
name = "data-sience-ml-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "jupyterlab>=4.3.6",
    "matplotlib>=3.10.1",
    "mysqlclient>=2.2.7",
    "notebook>=7.3.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
